catalog - сделал фильтр стимость

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-/*
-* {
+
+/* * {
   background: rgba(0, 255, 0, 0.08);
 } */
 
@@ -1206,7 +1206,7 @@ padding: 0;
   box-sizing: border-box;
   width: 348px;
   padding-left: 80px;
-  padding-right: 28px;
+  padding-right: 68px;
   background: #efefef;
   box-shadow: 0 70px #dcdcdc inset;
 
@@ -1222,6 +1222,14 @@ padding: 0;
   padding-right: 20px;
 
   box-shadow: 0 70px #efefef inset;
+}
+
+.filter-title {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  margin-top: 23px;
+  margin-bottom: 92px;
 }
 
 
@@ -1243,10 +1251,123 @@ line-height: 40px;
 }
 
 .filter fieldset {
+  position: relative;
   margin: 0;
   padding: 0;
+  margin-top: 13px;
   border: none;
 }
+
+.filter fieldset::before {
+  content: "";
+
+  position: absolute;
+  top: -13px;
+  left: 0;
+
+  width: 201px;
+  height: 2px;
+  background-color: #000000;
+}
+
+.range-filter {
+  width: 200px;
+  margin-bottom: 63px;
+}
+
+.range-controls {
+  position: relative;
+  height: 5px;
+  margin-bottom: 40px;
+  padding-top: 35px;
+
+  border-radius: 5px;
+
+}
+
+.range-controls .scale {
+  height: 2px;
+
+  background: #dbdbdb;
+}
+
+.range-controls .bar {
+  width: 60%;
+  height: 2px;
+
+  background: #91c92f;
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 26px;
+  left: 0;
+
+  width: 4px;
+  height: 4px;
+  padding: 0;
+
+  border: 8px solid #ffffff;
+  background-color: #ababab;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: -5px;
+}
+
+.range-controls .toggle-max {
+  left: 108px;
+}
+
+
+/* .price-controls {
+  position: absolute;
+  font-size: 0;
+} */
+
+.range-controls label {
+  position: absolute;
+  display: inline-block;
+  width: 70px;
+
+  font-family: "gilroylight", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 300;
+  color: rgba(0, 0, 0, 0.2);
+
+  background: #eeeeee;
+}
+
+.min-price {
+  top: 50px;
+  left: 0;
+}
+
+.max-price {
+  top: 50px;
+  left: 90px;
+}
+
+.range-controls input {
+  display: inline-block;
+  width: 45px;
+  padding: 0;
+  /* margin-left: 0px; */
+
+  font-family: "gilroylight", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 300;
+  color: rgba(0, 0, 0, 0.2);
+
+  border: none;
+  background: #eeeeee;
+}
+
 
 .filter ul {
   margin: 0;
@@ -1433,14 +1554,6 @@ line-height: 40px;
   opacity: 0.2;
 }
 
-
-.filter-title {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  margin-top: 25px;
-  margin-bottom: 248px;
-}
 
 .sorting {
   height: 70px;
