--- a/css/style.css
+++ b/css/style.css
@@ -177,13 +177,6 @@ input[type="radio"].visually-hidden {
   cursor: pointer;
 }
 
-/* Кнопки страницы каталога */
-.filter-button {
-  background-color: #eeeeee;
-}
-
-
-
 .container {
   display: flex;
   flex-direction: column;
@@ -1385,35 +1378,89 @@ padding: 0;
 .filter-input-checkbox + label::before {
   content: "";
   position: absolute;
-  top: 7px;
-  left: -40px;
 
-  box-sizing: border-box;
+  left: -40px;
+  top: 7px;
+
   width: 23px;
   height: 23px;
 
-  border: 2px solid #000000;
-  border-radius: 3px;
+  background-image: url("../img/checkbox-off.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
 
-.filter-input-checkbox:checked + label::after {
+.filter-input-checkbox:checked + label::before {
   content: "";
   position: absolute;
 
+  left: -40px;
   top: 7px;
-  left: -35px;
 
   width: 27px;
   height: 23px;
 
-  background-image: url("../img/checked.png");
+  background-image: url("../img/checkbox-on.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
+}
 
+.filter-input-radio + label::before {
+  content: "";
+
+  position: absolute;
+  left: -40px;
+  top: 6px;
+
+  box-sizing: border-box;
+  width: 25px;
+  height: 25px;
+
+  border: 4px solid #000000;
+  border-radius: 50%;
+}
+
+.filter-input-radio:checked + label::after {
+  content: "";
+
+  position: absolute;
+  left: -32px;
+  top: 14px;
+
+  width: 9px;
+  height: 9px;
+
+  background-color: #000000;
+  border-radius: 50%;
+}
+
+.filter-input:hover + label::before,
+.filter-input:focus + label::before,
+.filter-input:hover + label::after,
+.filter-input:focus + label::after {
+  opacity: 0.6;
+}
+
+.filter-input:active + label::before,
+.filter-input:active + label::after {
+  opacity: 1;
+}
+
+.filter-input:disabled + label::before, .filter-input:disabled + label::after {
+  opacity: 0.25;
 }
 
 .filter-input:disabled + label {
-  color: #a6a6a6;
+  opacity: 0.25;
+}
+
+.filter-button {
+  width: 200px;
+  padding-top: 0;
+
+  background-color: #eeeeee;
+
+  cursor: pointer;
 }
 
 .catalog-list h3{
