catalog - сделал зарегистрированного юзера в хедере

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-/*
+
 * {
   background: rgba(0, 255, 0, 0.12);
-} */
+}
 
 
 
@@ -360,6 +360,11 @@ input.search-input:hover::placeholder, input.search-input:focus::placeholder {
   background-repeat: no-repeat; background-position: 0px 9px;
 }
 
+.profile-link a {
+  background-image: url("../img/user.svg") ;
+  background-repeat: no-repeat; background-position: 0px 9px;
+}
+
 .compare a {
   margin-left: 2px;
 
@@ -374,21 +379,38 @@ input.search-input:hover::placeholder, input.search-input:focus::placeholder {
   background-repeat: no-repeat; background-position: 2px 9px;
 }
 
- .login-link {
-   width: 80px;
-   margin-left: 100px;
- }
+.login-link {
+  width: 80px;
+  margin-left: 100px;
+}
 
- .compare {
-   width: 100px;
-   margin-left: 200px;
- }
+.inner-page .logout-link {
+  padding: 0;
+  margin-left: 17px;
+}
 
- .basket {
-   width: 90px;
-   margin-left: 30px;
- }
+.logout-link a {
+  padding: 0;
+}
 
+.profile-link {
+  width: 160px;
+  margin-left: 100px;
+}
+
+.compare {
+  width: 100px;
+  margin-left: 200px;
+}
+
+.inner-page .compare {
+  margin-left: 57px;
+}
+
+.basket {
+  width: 90px;
+  margin-left: 30px;
+}
 
 
 .site-navigation {
