--- a/css/style.css
+++ b/css/style.css
@@ -7,28 +7,32 @@
 
 @font-face {
     font-family: "gilroyextrabold";
-    src: url("../fonts/gilroyextrabold-webfont.woff2") format("woff2");
+    src: url("../fonts/gilroyextrabold-webfont.woff2") format("woff2"),
+    url("../fonts/gilroyextrabold.woff") format("woff");
     font-weight: 800;
     font-style: normal;
 }
 
 @font-face {
     font-family: "gilroylight";
-    src: url("../fonts/gilroylight-webfont.woff2") format("woff2");
+    src: url("../fonts/gilroylight-webfont.woff2") format("woff2"),
+    url("../fonts/gilroylight.woff") format("woff");
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: "open_sanslight";
-    src: url("../fonts/opensans-light-webfont.woff2") format("woff2");
+    src: url("../fonts/opensans-light-webfont.woff2") format("woff2"),
+    url("../fonts/opensanslight.woff") format("woff");
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: "open_sansregular";
-    src: url("../fonts/opensans-regular-webfont.woff2") format("woff2");
+    src: url("../fonts/opensans-regular-webfont.woff2") format("woff2"),
+    url("../fonts/opensans.woff") format("woff");
     font-weight: 400;
     font-style: normal;
 }
