Д26. - добавил активное состояние при фокусе

--- a/css/style.css
+++ b/css/style.css
@@ -1613,7 +1613,8 @@ padding: 0;
   cursor: pointer;
 }
 
-.sorting-direction a:hover::before {
+.sorting-direction a:hover::before,
+.sorting-direction a:focus::before {
   opacity: 0.4;
 }
 
